--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -39,6 +39,6 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ################## DB TABLE NAMES ##################
-USERS_TABLE_NAME=
-POSTS_TABLE_NAME=
-QUESTIONS_TABLE_NAME=
+USERS_TABLE_NAME=users
+POSTS_TABLE_NAME=posts
+QUESTIONS_TABLE_NAME=questions
