Add upvote (cheer) model, migration, and tests. Update previous tests that use 'count(model->get())' and just use the collection count 'model->count()'

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ################## DB TABLE NAMES ##################
-USERS_TABLE_NAME=users
+CHEERS_TABLE_NAME=cheers
 POSTS_TABLE_NAME=posts
 QUESTIONS_TABLE_NAME=questions
+USERS_TABLE_NAME=users
